Basic components and website building

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,117 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~material-design-icons/iconfont/material-icons';
+@import "~font-awesome/css/font-awesome";
+@import 'assets/stylesheets/colors';
+
+$background-color: $light-background-color !default;
+$font-color: $light-font-color !default;
+$primary-color: $light-primary-color !default;
+$secondary-color: $light-secondary-color !default;
+$tertiary-color: $light-tertiary-color !default;
+
+@mixin theme($bg, $font, $primary, $secondary, $tertiary) {
+  $background-color: $bg !global;
+  $font-color: $font !global;
+  $primary-color: $primary !global;
+  $secondary-color: $secondary !global;
+  $tertiary-color: $tertiary !global;
+
+  background-color: $bg;
+  color: $font;
+
+  .logo {
+    align-items: center;
+    border: 2px solid $secondary-color;
+    border-radius: 25px;
+    color: $secondary-color;
+    display: flex;
+    height: 30px;
+    justify-content: center;
+    width: 30px;
+
+  }
+
+  .emphasize {
+    color: $secondary-color;
+  }
+
+  .pop {
+    color: lighten(#6b1725, 20)
+  }
+
+  .mat-toolbar {
+    background-color: $bg;
+  }
+
+  .mat-icon, i {
+    color: $secondary;
+  }
+
+  i {
+    font-size: 24px;
+  }
+}
+
+html {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#app {
+  &.light-mode {
+    @include theme(
+      $light-background-color,
+      $light-font-color,
+      $light-primary-color,
+      $light-secondary-color,
+      $light-tertiary-color,
+    );
+  }
+
+  &.dark-mode {
+    @include theme(
+      $dark-background-color,
+      $dark-font-color,
+      $dark-primary-color,
+      $dark-secondary-color,
+      $dark-tertiary-color,
+    );
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Raleway, sans-serif;
+  margin: 0;
+}
+
+h1 {
+  font-size: 42px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+p {
+  font-family: Merriweather, sans-serif;
+  font-size: 20px;
+}
